[gd_scene load_steps=3 format=2]

[ext_resource path="res://client.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Node"]
margin_left = 75.0
margin_top = 40.0
margin_right = 279.0
margin_bottom = 136.0
rect_scale = Vector2( 4, 4 )

[node name="Label2" type="Label" parent="Node"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 82.0
margin_top = 261.0
margin_right = 286.0
margin_bottom = 338.0
rect_scale = Vector2( 4, 4 )
text = "aaaaaaa"

[node name="Button_mask" type="Label" parent="Node"]
modulate = Color( 0, 0.760784, 0.121569, 1 )
margin_left = 150.0
margin_top = 436.0
margin_right = 354.0
margin_bottom = 513.0
rect_scale = Vector2( 4, 4 )
text = "buttonmmask
"

[node name="Icon" type="Sprite" parent="Node"]
position = Vector2( 187, 173 )
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Node"]

[node name="Icon2" type="Sprite" parent="Node/KinematicBody2D"]
position = Vector2( 187, 173 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Node"]
one_shot = true

[node name="Warning" type="Timer" parent="Node"]
one_shot = true

[connection signal="timeout" from="Node/Timer" to="Node" method="_on_Timer_timeout"]
[connection signal="timeout" from="Node/Warning" to="Node" method="_on_Warning_timeout"]
